kubernetes/applications/fullstack/ingressroutes/backend-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: backend
  namespace: fullstack
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`backend.local`)
      kind: Rule
      services:
        - name: backend-service
          port: 5000
  tls:
    secretName: backend-tls
