kubernetes/applications/fullstack/ingressroutes/nginx-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
  namespace: myapp
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`myapp.local`)
      kind: Rule
      services:
        - name: nginx-service
          port: 80
  tls:
    secretName: myapp-tls
