kubernetes/applications/fullstack/ingressroutes/prometheus-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prometheus.local`)
      kind: Rule
      services:
        - name: prometheus
          port: 9090


  tls:
    secretName: prometheus-tls
